# lattice-platform

./: .cta.json  .cursorrules  .env.example  .gitignore  .gitnexusignore  .graphifyignore  .mcp.json  .portless.json  2026-04.07_RETAIL + VENDOR_Attachment A_Budget Worksheet.csv  2026-04.07_RETAIL + VENDOR_Attachment A_Budget Worksheet.numbers  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  GRAPH_RESTART_AND_QUERY_RUNBOOK.md  I have Redshift and Vectorworks on my computer but.md  LATTICE Georef Binding.txt  Plant.txt  README.md  _Farber-Haines [2521]__ESTIMATION_WORKING_COPY__2026-05-16.ifc  biome.json  cloudflare-agent.md  codex.md  graphify.toml  itthisishowyoudoit  itthisishowyoudoit.md  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.tools/raufer-graphify/: pyproject.toml
pixeltable/: .env.example  .gitignore  .schema-snapshot.yaml  GOAL.md  MEMORY.md  Makefile  README.md  ingestion-contract.yaml  pyproject.toml  tables.yaml
pixeltable/contracts/: bridge-evidence.v1.yaml  bridge-health.v1.yaml  bridge-ifc.v1.yaml  bridge-itwin.v1.yaml  bridge-marpa.v1.yaml  bridge-semantic.v1.yaml  bridge-vw.v1.yaml  runtime-ledger.v1.yaml  sidecar.schema.json
pixeltable/fixtures/: itwin-changed-elements-mini.json  itwin-sync-job-mini.json  marpa-parse-run-mini.json  runtime-run-mini.jsonl  vwx-sidecar-mini.json
pixeltable/grammars/: VERSION  marpa.landscape.v1.actions.py  marpa.landscape.v1.bnf  marpa_seed_psets.yaml
pixeltable/knowledge/: __init__.py  tools.py
pixeltable/migrations/: 0001_create_lattice_root.py  0002_create_lattice_execution.py  0003_create_lattice_bridge_namespaces.py  0004_create_vw_tables.py  0005_create_ifc_tables.py  0006_create_itwin_tables.py  0007_create_marpa_tables.py  0008_create_semantic_tables.py  0009_create_evidence_tables.py  0010_create_health_tables.py  0011_add_embedding_indices.py  0012_extended_schema.py  0013_georef_reality_mirror.py  0014_harness.py  0014_harness_schema.py  0015_knowledge_substrate.py  0016_docs_substrate.py  0017_trellis_jobs.py  _0014_harness_schema.py  __init__.py  _helpers.py
pixeltable/scripts/: _pxt_env.py  apply_farber_haines_georef_fit.py  apply_farber_haines_survey_csv.py  assess_farber_haines_ifc_export.py  bootstrap.py  doctor.py  ingest_farber_haines_estimates.py  ingest_farber_haines_georef.py  load_fixtures.py  refresh_farber_haines_authoritative_georef_sources.py  run_farber_haines_georef_cycle.py  run_farber_haines_georef_live_update.py  validate_farber_haines_workflow.py  verify.py
pixeltable/service/: .portless.json  GOAL.md  MEMORY.md  __init__.py  deps.py  idempotency.py  ids.py  ifc_parser.py  itwin_adapter.py  logging.py  main.py  marpa_runner.py  settings.py  upsert.py  worker.py
pixeltable/service/ingest/: ingest_exports.py
pixeltable/service/routes/: _idempotent.py  erp.py  evidence.py  georef.py  harness.py  harness_health.py  health.py  itwin.py  marpa.py  projects.py  reality.py  runtime.py  vw.py  (+2 more)
pixeltable/tests/: conftest.py
vw-plugin/: CMakeLists.txt  GOAL.md  MEMORY.md  README.md
vw-plugin/config/: placeholder_rules.json
vw-plugin/include/: GeometryUtils.h  MCPBridge.h  PlaceholderCmd.h
vw-plugin/scripts/: extract_all.py  preflight_probe.vs
vw-plugin/sdk/: README.md
vw-plugin/src/: GeometryUtils.cpp  MCPBridge.cpp  PlaceholderCmd.cpp  plugin-entry.cpp
(+1103 files in other folders)
